<resources>
    <string name="espacio">" "</string>
    <!--
    Botones del menú principal
    -->
    <string name="app_name">P4 PMDM</string>
    <string name="button1">Cousins</string>
    <string name="button2">Countries</string>
    <string name="button3">Animals</string>
    <string name="button4">Flowers</string>

    <!--
   Activity generada del botón Primos
   -->

    <string name="app_name_primos">Calculate prime numbers</string>
    <string name="textViewPrimosCalcular">Introduzca el número a calcular</string>
    <string name="textViewPrimosResultado">El número </string>
    <string name="textViewPrimosResultadoPositivo">es primo</string>
    <string name="textViewPrimosResultadoNegativo">no es primo</string>
    <string name="ButtonCalcular">Calculate</string>

    <!--
   Activity generada del botón País
   -->

    <string name="pais1">España</string>
    <string name="pais2">Francia</string>
    <string name="pais3">Protugal</string>
    <string name="pais4">Estados Unidos</string>
    <string name="pais5">Canadá</string>
    <string name="pais6">Japón</string>
    <string name="pais7">China</string>
    <string name="pais8">Corea del Sur</string>
    <string name="pais9">Alemania</string>
    <string name="pais10">Suiza</string>

    <string name="capital1">Madrid</string>
    <string name="capital2">Paris</string>
    <string name="capital3">Lisboa</string>
    <string name="capital4">Washington D.C</string>
    <string name="capital5">Ottawa</string>
    <string name="capital6">Tokyo</string>
    <string name="capital7">Pekín</string>
    <string name="capital8">Seúl</string>
    <string name="capital9">Berlín</string>
    <string name="capital10">Berna</string>

    <string name="comparar">Comparar</string>
    <string name="resultadoPositivo">¡Es correcto!</string>
    <string name="resultadoNegativo">Es incorrecto :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_pais">Countries</string>


</resources>
