<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPais">


    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroupPais"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp">

                <RadioButton
                    android:id="@+id/radioPais1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais3"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais4"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais5"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais6"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais7"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais8"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais9"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioPais10"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

            </RadioGroup>

            <TextView
                android:id="@+id/textPais1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="139dp"
                android:layout_marginTop="16dp"
                android:text="@string/pais1" />

            <TextView
                android:id="@+id/textPais2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="137dp"
                android:layout_marginTop="70dp"
                android:text="@string/pais2" />

            <TextView
                android:id="@+id/textPais3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="134dp"
                android:layout_marginTop="115dp"
                android:text="@string/pais3" />

            <TextView
                android:id="@+id/textPais4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="112dp"
                android:layout_marginTop="166dp"
                android:text="@string/pais4" />

            <TextView
                android:id="@+id/textPais5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="139dp"
                android:layout_marginTop="216dp"
                android:text="@string/pais5" />

            <TextView
                android:id="@+id/textPais6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="144dp"
                android:layout_marginTop="267dp"
                android:text="@string/pais6" />

            <TextView
                android:id="@+id/textPais7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="148dp"
                android:layout_marginTop="318dp"
                android:text="@string/pais7" />

            <TextView
                android:id="@+id/textPais8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="125dp"
                android:layout_marginTop="364dp"
                android:text="@string/pais8" />

            <TextView
                android:id="@+id/textPais9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="141dp"
                android:layout_marginTop="419dp"
                android:text="@string/pais9" />

            <TextView
                android:id="@+id/textPais10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="157dp"
                android:layout_marginTop="474dp"
                android:text="@string/pais10" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>